# docs-storage

./: .flake8  .gitignore  .pre-commit-config.yaml  .prettierrc.yaml  README.md  docker-compose.yml  pyproject.toml
src/backend/: README.md  __init__.py  create_app.py  gunicorn_conf.py  main.py
src/backend/api/: base.py  router.py
src/backend/settings/: app.py  log.py
src/backend/tests/: conftest.py
src/backend/tests/api/: test_base.py
src/docker/: backend_Dockerfile
